[package]
name    = "uinput"
version = "0.1.3"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Linux uinput wrapper."
repository  = "https://github.com/meh/rust-uinput"
keywords    = ["linux", "input"]

[dependencies]
libc       = "0.2"
nix        = "0.10"
uinput-sys = "0.1"

custom_derive = "0.1"
enum_derive   = "0.1"
libudev = {version = "0.2", git="https://github.com/BrianHoldsworth/libudev-rs.git", optional=true}

[features]
default = ["udev"]
udev    = ["libudev"]
